# amset

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.rst  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.md  README.rst  changelog.html  circle.yml  comp.py  contributing.html  contributors.html  detect_peaks.py  index.html  inputs.html  installation.html  license.html  mkdocs.yml  pre-commit  requirements-dev.txt  requirements-docs.txt  requirements-optional.txt  requirements.txt  scattering.html  settings.html  setup.cfg  setup.py  sitemap.xml  tasks.py  test.json  tox.ini  transport-properties.html  (+1 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  dependabot-bot.yml  dependabot.yml
.github/workflows/: build-docs.yml  deps.yml  docs.yml  pre-commit.yml  release.yml  run-tests.yml  tests.yml
amset/: __init__.py  amset.py  analytical_band_from_BZT.py  base.py  bte.py  cli.py  constants.py  core.py  data.py  defaults.yaml  densify.py  dos.py  electronic_structure.py  interpolate.py  io.py  kpoints.py  log.py  logging.py  old_amset.py  plot.py  plot_bs_with_annotation.py  retrieve_band_structure.py  run.py  runner.py  scatter.py  solve.py  test_amset.py  tetrahedron.py  tools.py  tools_for_amset.py  transport.py  util.py  valley.py  voronoi.py
amset/core/: __init__.py  data.py  run.py  transport.py
amset/deformation/: common.py  generation.py  io.py  potentials.py
amset/electronic_structure/: boltztrap.py  common.py  dos.py  fd.py  interpolate.py  kpoints.py  mrta.py  overlap.py  response.py  symmetry.py  tetrahedron.py  wavefunction.py
amset/examples/: GaAs.py
amset/interpolate/: __init__.py  base.py  boltztrap1.py  boltztrap2.py  parabolic.py
amset/interpolation/: bandstructure.py  boltztrap.py  deformation.py  densify.py  interpolate.py  momentum.py  overlap.py  periodic.py  projections.py  quad.json  (+3 more)
c/: _amset.c  amset.c  amset.h  amset_array.h
changelog/: index.html
contributing/: index.html
contributors/: index.html
docs/: Makefile  amset.html  amset.interpolation.html  amset.misc.html  amset.scattering.html  amset.utils.html  changelog.html  conf.py  contributing.html  contributors.html  contributors.md  example_settings.html  genindex.html  index.html  index.md  index.rst  index3.html  index_backup.html  installation.html  installation.md  integration.md  license.html  mkdocs.yml  modules.html  objects.inv  py-modindex.html  references.html  scattering.html  scattering.md  search.html  searchindex.js  settings.html  settings.md  theory.html  theory.md  transport-properties.md  using.html  using.md
docs_rst/: amset.rst  amset.utils.rst  make.bat
examples/: Si.py  example_settings.yaml
inputs/: index.html
installation/: index.html
integration/: index.html
license/: index.html
patch_for_boltztrap/: README  patch.diff
properties/: index.html
scattering/: index.html
scripts/: compare_bt.py  plot_bs_with_annotation.py  retrieve_band_structure.py
search/: search_index.json
settings/: index.html
stylesheets/: colors.css
tests/: conftest.py  test_io.py  test_util.py
theory/: index.html
transport-properties/: index.html
using/: index.html
(+211 files in other folders)
